# bills_scan

./: Makefile  README.md  pyproject.toml
src/fine-tuning/: augmentation.py  collate_fn.py  config.py  dataset.py  evaluate.py  main.py  model.py  train.py
